@@ -1,3 +1,8 @@
+2006-03-27 Mikhail Khodjaiants
+	Moved the extraction of the stop symbol to the launch.
+	* LocalCDILaunchDelegate.java
+	* LocalRunLaunchDelegate.java
+
 2006-03-15 Mikhail Khodjaiants
 	Reversing previous changes. The existing "verifyProgramPath" method can be used.
 	* AbstractCLaunchDelegate.java
