@@ -1,3 +1,8 @@
+2006-03-27 Mikhail Khodjaiants
+	Moved the extraction of the stop symbol to the launch.
+	* CDIDebugModel.java
+	* CDebugTarget.java
+
 2006-03-06 Mikhail Khodjaiants
 	Fix for Bug 93777: Postmortem and Local launch need a default preference for selected debugger.
 	* CDebugCorePlugin.java
